🎁 1단계 - 리팩터링(상품) (#250)
* chore(Product): 리팩터링을 위한 초기 환경 세팅

* refactor(Product): Add product Factory method

1. Add ProductTest
2. Change default constructor's access modifier
3. Remove setter

* refactor(ProductPrice): 상품 가격 VO

1. 상품가격 생성
2. 상품가격은 0원보다 커야한다.
3. RequestDto 만듦.

* refactor(ProductName): 상품 이름 VO

1. 상품 이름 생성
2. 상품 이름 유효성 검사 : 비울 수 없다.
3. 상품이름에 비속어 포함되면 안된다.
4. PorfanityChecker로 이름 비속어체크 도메인 서비스 추가

* test(Product): 테스트코드 수정

* feat(ProductResponse): Change ResponseDto

* feat(ProductPrice): 상품 서비스에 메뉴 도메인 영역이 엮여있어 의존성 분리함.

1. 메뉴 서비스에 상품의 가격과 수량의 곱에 관련된 중복로직 private 함수로 추출.
2. 상품과 가격의 곱에 대한 도메인 로직 만들기.

* feat(Menu): 메뉴에게 행동 물어보기

1. menu 숨기기
2. menu의 구성상품 가격의 합
3. menu 구성상품의 가격의 합과 비교하기

* feat(Product): 메뉴 서비스와의 연결 끊기

1. ApplicationEventPublisher이용
2. 부패방지계층 추가
3. 테스트코드 작성